Revert "fix: blank page - reveal visible elements synchronously on init"
This reverts commit b6c9e7c0f9a9c7992660561f50ece3f84c4179ec.

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -111,16 +111,6 @@ img {
   }
 }
 
-@media (prefers-reduced-motion: reduce) {
-  .scroll-reveal,
-  .scroll-reveal-left,
-  .scroll-reveal-right,
-  .scroll-reveal-scale {
-    opacity: 1;
-    transform: none;
-  }
-}
-
 .scroll-reveal-left {
   opacity: 0;
   transform: translateX(-30px);
